# SysInfo

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: AppWindow.slint  ModelTypes.slint  TabLayout.slint
ui/TabPanes/: CPU.slint  Disk.slint  Home.slint  Memory.slint  Network.slint  Process.slint
ui/TabPanes/Cpu/: Cores.slint  DataTypes.slint  InfoPane.slint  ModelTypes.slint
ui/TabPanes/Disk/: DataTypes.slint  DiskIO-Chart.slint  ModelTypes.Slint
ui/TabPanes/Home/: BarChart.slint  ChartBar.slint  DataTypes.slint  LineGraph.slint  MetricCard.slint  ModelTypes.slint  QuickMetrics.slint
ui/TabPanes/Memory/: DataTypes.slint
ui/TabPanes/Network/: DataTypes.slint
ui/Widgets/: DoubleBarUsageChart.slint  Hero-Header.slint  Infocard.slint  PaneButton.slint  Sidebar.slint  UsageChart.slint
