[package]
name = "SysInfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_if_addrs = "0.5.3"
rand = "0.9.2"
slint = { version = "1.14.1", features = ["renderer-skia", "backend-winit"]}
sysinfo = "0.37.2"

[build-dependencies]
slint-build = "1.14.1"
